<resources>
    <string name="app_name">2048 Game</string>
    <string name="app_title">2048</string>
    <string name="score_label">SCORE</string>
    <string name="best_label">BEST</string>
    <string name="moves_label">MOVES</string>
    <string name="action_restart">Reiniciar</string>
    <string name="action_undo">Deshacer</string>
    <string name="action_show_last">Última partida</string>
    <string name="no_last_game">No hay última partida guardada</string>
    <string name="zero">0</string>
</resources>